<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:background="@drawable/animation_list"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/radyomuz_hakkında"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="@color/beyaz"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Radyomuz hakkında"></Button>




    <Button
        android:id="@+id/oy_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="@color/beyaz"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Google_Playde_oy_ver"></Button>



    <Button
        android:id="@+id/paylaş"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="@color/beyaz"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Arkadaşlarınla_paylaş"></Button>


    <Button
        android:id="@+id/bize_ulaş"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="@color/beyaz"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Bize_ulaş"></Button>


    <Button
        android:id="@+id/çıkış_yap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="@color/beyaz"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Çıkış yap"></Button>



</LinearLayout>